--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <!-- Font Awesome -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hofsito Portfolio</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Portafolio profesional de Adiel Grazt, desarrollador frontend especializado en la creación de sitios web modernos, estratégicos y visualmente impactantes." />
+    <meta name="author" content="Adiel Esteban Grazt Salamanca" />
+    <meta name="keywords" content="Adiel Grazt, Hofsito, portafolio, desarrollador web, frontend, sitios web, desarrollo de software, diseñador web, proyectos web" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+    <title>Adiel Grazt | Portafolio Profesional</title>
   </head>
   <body>
     <div id="root"></div>
